created filter quote and client also modified history route

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -12,7 +12,7 @@
     "UserCollectionName": "Users",
     "ClientCollectionName": "Clients",
     "Counters": "Counters",
-    "ClientHistory": "History",
+    "History": "History",
     "Quotes": "Quotes",
     "QuoteServices": "QuoteServices"
 
