--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -13,6 +13,8 @@
     "@fluentui/react": "^8.123.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
